# 1.3.6

* Extract the default data URI image converter to the images module.

# 1.3.5

* Handle complex fields that do not have a "separate" fldChar.

# 1.3.4

* Add transforms.run.

# 1.3.3

* Read children of w:object elements.

* Add support for document transforms.

# 1.3.2

* Handle hyperlinks created with complex fields.

# 1.3.1

* Handle absolute paths within zip files. This should fix an issue where some
  images within a document couldn't be found.

# 1.3.0

* Allow style names to be mapped by prefix. For instance:

      r[style-name^='Code '] => code

* Add default style mappings for Heading 5 and Heading 6.

* Allow escape sequences in style IDs, style names and CSS class names.

* Allow a separator to be specified when HTML elements are collapsed.

* Add include_embedded_style_map argument to allow embedded style maps to be
  disabled.

* Include embedded styles when explicit style map is passed.

# 1.2.2

* Ignore bold, italic, underline and strikethrough elements that have a value of
  false or 0.

# 1.2.1

* Ignore v:imagedata elements without relationship ID with warning.

# 1.2.0

* Use alt text title as alt text for images when the alt text description is
  blank or missing.
  
# 1.1.1

* Handle comments without author initials.

* Change numbering of comments to be global rather than per-user to match the
  behaviour of Word.

# 1.1.0

* Add support for comments.

# 1.0.4

* Add support for w:sdt elements. This allows the bodies of content controls,
  such as bibliographies, to be converted.

# 1.0.3

* Add support for table cells spanning multiple rows.

# 1.0.2

* Add support for table cells spanning multiple columns.

# 1.0.1

* Improve script installation on Windows by using entry_points instead of
  scripts in setup.py.

# 1.0.0

* Remove deprecated convert_underline argument.

* Officially support ID prefixes.

* Generated IDs no longer insert a hyphen after the ID prefix.
